--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,6 +14,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-button (click)="getLocation()">GPS</ion-button>
+  {{lat}}, {{long}}
+  <hr>
   <ion-card
     *ngFor="let city of cities"
     (click)="searchCityFromCard(city.name)"
