ionic storage and comments done

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,29 +3,42 @@
     <ion-title>WeatherApp</ion-title>
   </ion-toolbar>
   <ion-toolbar>
+    <!-- Search Bar to allow user to type a city name and search for it by pressing enter -->
     <ion-searchbar
     [(ngModel)]="searchTerm"
     (keyup.enter)="searchCity()"
     (ionClear)="searchTerm = ''"
-    placeholder="Search city..."
-    debounce="500">
+    placeholder="Search city...">
   </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-button (click)="getLocation()">GPS</ion-button>
-  {{lat}}, {{long}}
+<ion-content [fullscreen]="true" class="ion-padding">
+   <!-- Button to get weather using geolocation -->
+  <ion-button expand="block" fill="outline" (click)="getLocation()">📍 Use My Location</ion-button>
+
+   <!-- Displays the latest searched city from storage, with a button to re-search it -->
+  <div *ngIf="latestSearch" class="latest-search">
+    <span class="label">Your latest search:</span>
+    <ion-button size="small" fill="clear" (click)="searchCityFromCard(latestSearch)">
+      {{ latestSearch }}
+    </ion-button>
+  </div>
+  
   <hr>
-  <ion-card
-    *ngFor="let city of cities"
-    (click)="searchCityFromCard(city.name)"
-    style="text-align: center; cursor: pointer;"
-  >
-    <img [src]="city.image" />
-    <ion-card-header>
-      <ion-card-title>{{ city.name }}</ion-card-title>
-    </ion-card-header>
-  </ion-card>
+
+  <!-- Grid of predefined Irish cities, shown as clickable cards -->
+  <div class="city-grid">
+    <ion-card
+      *ngFor="let city of cities"
+      (click)="searchCityFromCard(city.name)"
+      class="city-card"
+    >
+      <img [src]="city.image" alt="{{ city.name }}" />
+      <ion-card-header>
+        <ion-card-title>{{ city.name }}</ion-card-title>
+      </ion-card-header>
+    </ion-card>
+  </div>
 
 </ion-content>
