--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -7,7 +7,7 @@
   top: 50%;
   transform: translateY(-50%);
 }
-
+//
 #container strong {
   font-size: 20px;
   line-height: 26px;
@@ -16,12 +16,61 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
 #container a {
   text-decoration: none;
+}
+/*
+every thing below is custom css, for the grid, cards and latest search text
+*/
+.city-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 16px;
+  padding-inline: 8px;
+}
+
+.city-card {
+  width: 100%;
+  height: 220px;
+  display: flex;
+  margin: 0;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+
+  img {
+    width: 100%;
+    height: 140px;
+    object-fit: cover;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  ion-card-header {
+    text-align: center;
+    padding: 8px;
+  }
+}
+
+.latest-search {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  font-size: 16px;
+  margin-top: 10px;
+
+  .label {
+    color: #000; 
+  }
+
+  ion-button {
+    --color: var(--ion-color-primary); // Default Ionic blue
+    font-size: 16px;
+    padding: 0;
+    height: auto;
+  }
 }
